Fri Feb  1 19:57:59 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix use of ! in shell.

	* gtk/gtktooltips.c (gtk_tooltips_class_init) gtkrc.default: 
	Move the setting of default tooltips colors to gtktooltips.c
	from gtkrc.default. (Use default priority so themes will
	override.) (#58542)

Fri Feb  1 17:48:51 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c (gtk_rc_get_style): Fix ordering of
	priorities so that priorities take precendence over
	the ordering by type. (#70205)

	* test/testgtkrc tests/testgtk.c (create_rc_file): Add 
	some labels to test priorities in testgtkrc.

Fri Feb  1 00:37:49 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_move_cursor_page_up_down): use
	y coordinate relative to the tree and not the treeview window
	(fixes the PgDn/PgUp brokenness)

Fri Feb  1 23:40:31 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): adjust
	cell_area and background_area for possible treeview scroll
	(fixes #70283, #70065)

Fri Feb  1 22:20:13 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): use
	height - page_size not height - allocation->height (fixes #66269)

Fri Feb  1 15:22:23 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimage.c (gtk_image_class_init): Fix typo
	in property description. (Christian Rose.)

Fri Feb  1 14:50:36 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c (gtk_rc_parse_string): Handle reparsing
	any strings if the theme changes. (#69465)

	* tests/testgtk.c: Add a test for gtk_rc_parse_string().

Fri Feb  1 20:50:29 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_dy_to_top_row): set tree to
	NULL if tree_view->priv->tree is NULL (#70152, patch by John Harper).

Fri Feb  1 12:51:20 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (focus_child_in): Catch the
	cur_page == NULL (no children) case. (#70287,
	Paolo Maggi.)
